--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,13 @@ body{
     font-family: 'Judson',sans-serif;
     color: #333;
     line-height: 1.6;
+    
+}
+
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    
+
 }
